--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Helvetica Neue";
+  src: url("/src/assets/fonts/HelveticaNeue-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
