--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 @import "tailwindcss";
 
 @font-face {
@@ -6,4 +7,8 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
+}
+
+@layer base {
+  html { font-family: "Helvetica Neue", Arial, sans-serif; }
 }
